# HYPERSAW

./: .gitignore  .gitmodules  ACCEPTANCE.md  CHANGE-NOTE-splay-legibility.md  CLAUDE.md  CMakeLists.txt  DECISIONS.md  INDEX.md  LIBRARY.md  PARKED.md  PRIOR-ART.md  README.md  ROADMAP.md  SPEC-EFFECTS.md  SPEC-SWARMALATOR.md  SPEC.md  install  kuramoto-entangled-mods-proposal.md  project.manifest.json  swarmalator.html  swarmdynamics.html  swarmfilter.html  swarmphaser.html  swarmsaw.html  swarmspectra.html  swarmtime.html  verify
.claude/: settings.json
.github/workflows/: ci.yml
docs/change-notes/: 2026-07-18-update-001-effects-brief.md
docs/design/: 2026-07-19-coupling-topology-axes.md  detune-lab.html  kuramoto-lfo-golden-spec.md  mod-lab.html
docs/design/kuramoto-lfo-prototypes/: NON-GOLDEN.md  swarmlfo-depth.html  swarmlfo-dest.html  swarmlfo-rotor.html  swarmlfo.html
docs/img/: README.md
docs/integrations/: HYPERSAW-001-tonality-brief-draft.md
docs/presets/: community-finds.md
docs/proposals/: 2026-07-20-kuramoto-lfo.md
docs/reports/: 2026-07-17-phase0-gate.html  2026-07-17-spinup-ratification.html  2026-07-22-lab-to-core-fold-map.html
docs/research/: 2026-07-19-mpe-vst3-findings.md
src/: filter_core.h  force_core.h  fx_rack.h  hypersaw_clap.cpp  hypersaw_clap_entry.cpp  hypersaw_clap_entry.h  notch_core.h  spectra_core.h  swarm_core.h  swarmalator_core.h  swarmfx_clap.cpp  swarmfx_entry.cpp  swarmfx_entry.h  time_core.h
src/gui/: gui.html  hypersaw_gui.h  hypersaw_gui.mm  hypersaw_gui_common.h  hypersaw_gui_win.cpp
tools/: embed_file.py  filter_check.cpp  force_check.cpp  notch_check.cpp  notefuzz_check.cpp  parity_check.cpp  renderer_bench.cpp  spectra_check.cpp  state_check.cpp  swarmalator_check.cpp  time_check.cpp  trajectory_check.cpp
tools/golden/: extract_core.mjs  extract_force.mjs  gen_filter_goldens.mjs  gen_force_goldens.mjs  gen_goldens.mjs  gen_notch_goldens.mjs  gen_spectra_goldens.mjs  gen_swarmalator_goldens.mjs  gen_time_goldens.mjs
traces/: 2026-07-17-dynamics-v2-adr-merge.md  2026-07-17-gate-close-golden-gen.md  2026-07-17-phase0-platform.md  2026-07-17-phase1-swarmcore-parity.md  2026-07-17-ratification-cleanup.md  2026-07-17-spinup.md  2026-07-18-absk-range-scatter.md  2026-07-18-absk-visibility.md  2026-07-18-adr037a-p1-gate.md  2026-07-18-bassmono-panscatter.md  2026-07-18-carpet-vizvalue-brief.md  2026-07-18-dynamics-surface.md  2026-07-18-gui-columns.md  2026-07-18-gui-polish.md  2026-07-18-gui-v1-webview.md  2026-07-18-kvector-magnitude.md  2026-07-18-layout-fix-adsr.md  2026-07-18-mpe-kvector.md  2026-07-18-mpe-wrapped-formats.md  2026-07-18-noteend-gridquant.md  2026-07-18-packet-update001-vizgrid.md  2026-07-18-phase2-gate.md  2026-07-18-phase2-plugin-integration.md  2026-07-18-phase3-dynamics-core.md  2026-07-18-phase4-spectra-core.md  2026-07-18-slider-shiftstuck.md  2026-07-18-spectra-reach-xy.md  2026-07-18-spectra-shell.md  2026-07-18-spectra-strip-visualizer.md  2026-07-18-spectra-subosc.md  2026-07-18-spectra-usability-batch.md  2026-07-18-state-persistence.md  2026-07-18-tempo-grid.md  2026-07-18-textfocus-gateclose.md  2026-07-18-textfocus-hold.md  2026-07-18-track-e0-force-core.md  2026-07-18-tune-glidefix.md  2026-07-18-vel0-noteoff-hang.md  2026-07-18-viz-fix-spectrum-interactions.md  2026-07-18-voice-width.md  (+51 more)
